# actix-scoped

./: Cargo.toml
.github/workflows/: cd.yml  ci.yml
actix_scoped/: Cargo.toml
actix_scoped/src/: lib.rs
actix_scoped_derive/: Cargo.toml
actix_scoped_derive/src/: gen.rs  lib.rs  parse.rs  util.rs
actix_scoped_example/: .gitignore  Cargo.toml
actix_scoped_example/src/: main.rs
