[package]
name = "actix_scoped_derive"
version = "0.0.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0.38", features = ["derive", "extra-traits"] }

